--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,22 @@
+# Although we're building a Node.js application, we're using Python to run tests in Travis
 language: python
 
 services:
   - docker
 
+# Build the docker image and run it
 install:
-  - docker build -t test_web_app .
-  - docker run -d -p 127.0.0.1:80:8080 --name test_web_app test_web_app
+  - docker build -t test-web-app .
+  - docker run -d -p 127.0.0.1:80:8080 --name test-web-app test-web-app
 
+# Pre-requisite for the python test
 before_script:
   - pip install requests
+  - curl -L https://git.io/get_helm.sh | bash
 
+# Check whether the container is started, and run test
+# Test helm chart
 script:
-  - docker ps | grep -q test_web_app
+  - docker ps | grep -q test-web-app
   - python tests.py
+  - helm template charts/test-web-app
