--- a/charts/test-web-app/Chart.yaml
+++ b/charts/test-web-app/Chart.yaml
@@ -1,11 +1,12 @@
----
-name: test_web_app
+apiVersion: v1
+name: test-web-app
 version: 0.1
 appVersion: 1.0.0
-description: A sample web app using Node.js
+description: A simple web app using Node.js
 keywords:
   - node
 sources:
   - https://github.com/adyromantika/playground-node
 maintainers:
   - name: adyromantika
+    email: ady.romantika@gmail.com
