--- a/charts/test-web-app/templates/deployment.yaml
+++ b/charts/test-web-app/templates/deployment.yaml
@@ -2,17 +2,13 @@ kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
   name: {{ template "application.name" . }}-deployment
-  namespace: kube-system
+  namespace: {{ .Values.kubernetes.namespace }}
   labels:
     app: {{ template "application.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
 spec:
-  replicas: {{ .Values.application.replicas }}
-  selector:
-    matchLabels:
-      app: {{ template "application.name" . }}
   template:
     metadata:
       labels:
@@ -20,9 +16,7 @@ spec:
     spec:
       terminationGracePeriodSeconds: 60
       containers:
-      - image: "{{ .Values.application.image.repository }}:{{ .Values.application.image.tag }}"
+      - name: {{ template "application.name" . }}
+        image: "{{ .Values.application.image.repository }}:{{ .Values.application.image.tag }}"
         imagePullPolicy: "{{ .Values.application.image.pullPolicy }}"
-        name: {{ template "application.name" . }}
-        args:
-        - --api
-        - --kubernetes
+    replicas: {{ .Values.application.replicas }}
