--- a/charts/test-web-app/values.yaml
+++ b/charts/test-web-app/values.yaml
@@ -5,10 +5,10 @@ kubernetes:
   namespace: default
 
 ingress:
-  hostname: test_web_app.example.com
+  hostname: test-web-app.example.com
 
 application:
-  name: test_web_app
+  name: test-web-app
   image:
     repository: myrepository
     tag: 1.0.0
