--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ script:
   - helm template charts/test-web-app
 
 after_success:
-  - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+  - docker login -u $DOCKER_USER -p $DOCKER_PASS
   - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
   - docker tag $REPO:$COMMIT $REPO:$TAG
   - docker push $REPO
