--- a/charts/test-web-app/values.yaml
+++ b/charts/test-web-app/values.yaml
@@ -10,8 +10,8 @@ ingress:
 application:
   name: test-web-app
   image:
-    repository: myrepository
-    tag: 1.0.0
+    repository: adyromantika/test-web-app
+    tag: %REV%
     pullPolicy: IfNotPresent
 
   # Number of pods to create.
