Use the real token for replacement

--- a/charts/test-web-app/values.yaml
+++ b/charts/test-web-app/values.yaml
@@ -11,7 +11,7 @@ application:
   name: test-web-app
   image:
     repository: adyromantika/test-web-app
-    tag: %REV%
+    tag: %TAG%
     pullPolicy: IfNotPresent
 
   # Number of pods to create.
